--- a/spotter/Storyboards/Main.storyboard
+++ b/spotter/Storyboards/Main.storyboard
@@ -25,6 +25,14 @@
                                     <segue destination="61g-AH-GGk" kind="show" id="oG6-GL-OpI"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXi-24-Ago">
+                                <rect key="frame" x="143" y="261" width="88" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Tweet画面へ"/>
+                                <connections>
+                                    <segue destination="MuX-pV-MtE" kind="show" id="PhD-uO-JQL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -41,6 +49,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V3X-UH-97X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="846" y="-257"/>
+        </scene>
+        <!--tweet-->
+        <scene sceneID="12Q-cb-ExV">
+            <objects>
+                <viewControllerPlaceholder storyboardName="tweet" id="MuX-pV-MtE" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xw8-z0-idp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="890" y="96"/>
         </scene>
     </scenes>
 </document>
